# parasol

./: .gitignore  CMakeLists.txt  LANGUAGE_README.md  LICENSE  README.md
compiler/: parasol.lemon
compiler/prslc/: AST.py  BuiltinFunctions.py  Functions.py  Module.py  Parse.py  Scope.py  Translate.py  Types.py  Util.py
examples/: basic_basic.prsl  basic_with_func.prsl  unrooted_types.prsl
legacy/: CMakeLists.txt
legacy/parasol_examples/: phong.prsl  simplicity.prsl
legacy/prslc/: AST.py  Builtins.h  Compiler.h  DOTVisitor.cpp  Lexer.cpp  Lexer.h  ParasolAST.cpp  ParasolAST.h  Parser.cpp  Parser.h  Visitor.h  parasol.lemon
legacy/test_source/: 1.prsl
parasol_examples/: phong.prsl  simplicity.prsl
prslc/: .gitignore  BasicPasses.cpp  BasicPasses.h  Builtins.cpp  Builtins.h  Compiler.cpp  Compiler.h  DOTVisitor.cpp  DOTVisitor.h  IDVisitor.cpp  IDVisitor.h  LANGUAGE_README.md  Lexer.cpp  Lexer.h  ParasolAST.cpp  ParasolAST.h  ParasolPT.cpp  ParasolPT.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Types.cpp  Types.h  Visitor.cpp  Visitor.h  main.cpp  parasol.lemon  prsl_grammar.y
prslc/parasol/: AST.py  Parser.py  parasol.lark
runtime/: README.md
test_source/: 1.prsl  2.prsl
